opentelemetry/overlays/nerc-ocp-obs/tempo-distributor-allow-collector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-distributor-allow-collector
  namespace: opentelemetry
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: distributor
      app.kubernetes.io/instance: opentelemetry
      app.kubernetes.io/managed-by: tempo-operator
      app.kubernetes.io/name: tempo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/managed-by: opentelemetry-operator
      ports:
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
